--- a/UBWebsite/about-us.html
+++ b/UBWebsite/about-us.html
@@ -40,13 +40,13 @@
                             课程内容
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html#IGCSE">IGCSE课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#A-level">Alevel课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#IB">IB课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#AP">AP课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#SAT">SAT 课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#competition">国际竞赛课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#language">小语种语言培训</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#IGCSE">IGCSE课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#A-level">Alevel课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#IB">IB课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#AP">AP课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#SAT">SAT 课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#competition">国际竞赛课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#language">小语种语言培训</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -211,50 +211,51 @@
                                 <h6>我们的优势</h6>
                                 <h2>We put the interests of the <span>students first</span></h2>
                             </div>
-                            <p></p>
+                            <p>我们非常尊重每个学生的独特性，并且针对不同的学生量身定制合适的教学方式，确保课程内容生动易懂。</p>
+                            <p>我们的授课教师不仅有着丰富的教学经验,还掌握着大量的考试解题技巧；授课内容突出重点、解析难点，以高效的课程辅导、优质的课堂服务来提高学员的成绩。</p>
+                            <p>知识改变命运，学习造就未来，SN以全新的办学理念，独特的授课风格，优质的教学服务，确保高质量的教学成果。</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="company_skill">
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellente sque sit am et tellus blandit. Etiam nec odio vestibul.</p>
                             <div class="our_skill_inner">
                                 <div class="single_skill">
-                                    <h3>Development</h3>
-                                    <div class="progress" data-value="70">
+                                    <div class="single_skill">
+                                        <h3>硕士及以上学历</h3>
+                                        <div class="progress" data-value="95">
+                                            <div class="progress-bar">
+                                                <div class="progress_parcent"><span class="counter">95</span>%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <h3>覆盖考点</h3>
+                                    <div class="progress" data-value="100">
                                         <div class="progress-bar">
-                                            <div class="progress_parcent"><span class="counter">70</span>%</div>
+                                            <div class="progress_parcent"><span class="counter">100</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h3>Design</h3>
-                                    <div class="progress" data-value="90">
+                                    <h3>权威授课教材</h3>
+                                    <div class="progress" data-value="100">
                                         <div class="progress-bar">
-                                            <div class="progress_parcent"><span class="counter">90</span>%</div>
+                                            <div class="progress_parcent"><span class="counter">100</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h3>SEO</h3>
-                                    <div class="progress" data-value="85">
+                                    <h3>专业的教育团队</h3>
+                                    <div class="progress" data-value="100">
                                         <div class="progress-bar">
-                                            <div class="progress_parcent"><span class="counter">85</span>%</div>
+                                            <div class="progress_parcent"><span class="counter">100</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h3>Development</h3>
-                                    <div class="progress" data-value="90">
+                                    <h3>过硬的技术实力</h3>
+                                    <div class="progress" data-value="100">
                                         <div class="progress-bar">
-                                            <div class="progress_parcent"><span class="counter">90</span>%</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="single_skill">
-                                    <h3>Management</h3>
-                                    <div class="progress" data-value="75">
-                                        <div class="progress-bar">
-                                            <div class="progress_parcent"><span class="counter">75</span>%</div>
+                                            <div class="progress_parcent"><span class="counter">100</span>%</div>
                                         </div>
                                     </div>
                                 </div>
@@ -287,8 +288,8 @@
                                 </div>
                                 <p>主营课程</p>
                                 <ul>
-                                    <li><a class="foot-link" href="blog.html">IGCSE课程</a></li>
-                                    <li><a class="foot-link" href="single-blog.html">Alevel课程</a></li>
+                                    <li><a class="foot-link" href="intro.html">IGCSE课程</a></li>
+                                    <li><a class="foot-link" href="single-intro.html">Alevel课程</a></li>
                                     <li><a class="foot-link" href="elements.html">IB课程</a></li>
                                     <li><a class="foot-link" href="">AP课程</a></li>
                                     <li><a class="foot-link" href="">SAT 课程</a></li>
