--- a/UBWebsite/index.html
+++ b/UBWebsite/index.html
@@ -41,13 +41,13 @@
                             课程内容
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html#IGCSE">IGCSE课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#A-level">Alevel课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#IB">IB课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#AP">AP课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#SAT">SAT 课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#competition">国际竞赛课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html#language">小语种语言培训</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#IGCSE">IGCSE课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#A-level">Alevel课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#IB">IB课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#AP">AP课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#SAT">SAT 课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#competition">国际竞赛课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html#language">小语种语言培训</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -268,8 +268,8 @@
                                 </div>
                                 <p>主营课程</p>
                                 <ul>
-                                    <li><a class="foot-link" href="blog.html">IGCSE课程</a></li>
-                                    <li><a class="foot-link" href="single-blog.html">Alevel课程</a></li>
+                                    <li><a class="foot-link" href="intro.html">IGCSE课程</a></li>
+                                    <li><a class="foot-link" href="single-intro.html">Alevel课程</a></li>
                                     <li><a class="foot-link" href="elements.html">IB课程</a></li>
                                     <li><a class="foot-link" href="">AP课程</a></li>
                                     <li><a class="foot-link" href="">SAT 课程</a></li>
