--- a/UBWebsite/single-blog.html
+++ b/UBWebsite/single-blog.html
@@ -41,8 +41,8 @@
                             课程内容
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">IGCSE课程</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Alevel课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="intro.html">IGCSE课程</a></li>
+                                <li class="nav-item"><a class="nav-link" href="single-intro.html">Alevel课程</a></li>
                                 <li class="nav-item"><a class="nav-link" href="elements.html">IB课程</a></li>
                                 <li class="nav-item"><a class="nav-link" href="">AP课程</a></li>
                                 <li class="nav-item"><a class="nav-link" href="">SAT 课程</a></li>
@@ -66,23 +66,23 @@
         </section>
         <!--================End Banner Area =================-->
         
-        <!--================Blog Main Area =================-->
-        <section class="blog_main_area p_100">
+        <!--================intro Main Area =================-->
+        <section class="intro_main_area p_100">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-9">
-                        <div class="single_blog_inner">
-                            <div class="s_blog_main">
-                                <div class="blog_img">
-                                    <img class="img-fluid" src="img/blog/blog-1.jpg" alt="">
-                                    <div class="blog_date">
+                        <div class="single_intro_inner">
+                            <div class="s_intro_main">
+                                <div class="intro_img">
+                                    <img class="img-fluid" src="img/intro/intro-1.jpg" alt="">
+                                    <div class="intro_date">
                                         <h4>29</h4>
                                         <h5>October, 2017</h5>
                                     </div>
                                 </div>
-                                <div class="blog_text">
+                                <div class="intro_text">
                                     <a href="#"><h4>Let us introduce you the best apps</h4></a>
-                                    <div class="blog_author">
+                                    <div class="intro_author">
                                         <a href="#">By Lore Papp-Dinea</a>
                                         <a href="#">Design</a>
                                     </div>
@@ -91,7 +91,7 @@
                                     <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices. Quisque laoreet vel risus et luctus. Fusce eleifend purus vel eros cursus imperdiet. Aliquam lacinia dolor sollicitudin pretium interdum. Nam velit dolor, eleifend eget felis ac, finibus accumsan dui. Fusce quis magna urna. </p>
                                 </div>
                             </div>
-                            <div class="s_blog_social">
+                            <div class="s_intro_social">
                                 <h3>Share</h3>
                                 <ul>
                                     <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
@@ -102,10 +102,10 @@
                                     <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="blog_author">
+                            <div class="intro_author">
                                 <div class="media">
                                     <div class="d-flex">
-                                        <img class="rounded-circle" src="img/blog/blog-author.png" alt="">
+                                        <img class="rounded-circle" src="img/intro/intro-author.png" alt="">
                                     </div>
                                     <div class="media-body">
                                         <h4>Michael Smith, <span>Author</span></h4>
@@ -113,7 +113,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="blog_comment">
+                            <div class="intro_comment">
                                 <h3>Comments (2)</h3>
                                 <div class="media">
                                     <img src="img/comment/comment-1.png" alt="">
@@ -138,7 +138,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="blog_comment_form">
+                            <div class="intro_comment_form">
                                 <h3>Leave a comment</h3>
                                 <form class="row contact_us_form" method="post" id="contactForm" novalidate="novalidate">
                                     <div class="form-group col-sm-6">
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="blog_right_sidebar">
+                        <div class="intro_right_sidebar">
                             <aside class="r_widget search_widget">
                                 <div class="input-group">
                                     <input type="text" class="form-control" placeholder="Search" aria-label="Search">
@@ -240,7 +240,7 @@
                 </div>
             </div>
         </section>
-        <!--================End Blog Main Area =================-->
+        <!--================End intro Main Area =================-->
         
         <!--================Footer Area =================-->
         <footer class="footr_area">
@@ -263,8 +263,8 @@
                                 </div>
                                 <p>主营课程</p>
                                 <ul>
-                                    <li><a class="foot-link" href="blog.html">IGCSE课程</a></li>
-                                    <li><a class="foot-link" href="single-blog.html">Alevel课程</a></li>
+                                    <li><a class="foot-link" href="intro.html">IGCSE课程</a></li>
+                                    <li><a class="foot-link" href="single-intro.html">Alevel课程</a></li>
                                     <li><a class="foot-link" href="elements.html">IB课程</a></li>
                                     <li><a class="foot-link" href="">AP课程</a></li>
                                     <li><a class="foot-link" href="">SAT 课程</a></li>
