--- a/UBWebsite/intro.html
+++ b/UBWebsite/intro.html
@@ -84,7 +84,7 @@
                                     
                                 </div>
                                 <p>是国外14岁至16岁全世界考试最多人数的体系之一，是CIE（Cambridge International examination）, 剑桥全球测试的一部分。其证书，只要是说英文的国家地区均会得到承认， 该考试相当于我们理解的“SSAT”，唯一不同的是：若同学想申请英国名校剑桥，牛津大学等相近英系大学，此考试成绩是申请的重要参考之一。 因中英教育体系的不同，高中的GPA成绩换算，英国无标准，不能准确了解学员的智力和学术能力，所以该考试成绩很有必要。</p>
-                                <a class="more_btn" href="elements.html">Read More</a>
+                                <a class="more_btn" href="elements.html#IGCSE">Read More</a>
                             </div>
                         </div>
                         <div class="intro_main_item" id="A-level">
@@ -99,7 +99,7 @@
                                 <div class="intro_author">
                                 </div>
                                 <p>英国高中课程，是英国全民课程体系，是英国普通中等教育证书考试高级水平课程，也是英国学生的大学入学考试课程。A-Level课程证书被几乎所有英语授课的大学作为招收新生的入学标准。 在中国开设A-Level课程旨在为中国学生提供进入国外大学的有效途径，具体目标为：培养在国内初高中成绩优秀的学生进入世界顶尖大学；培养在国内初高中成绩中等的学生进入世界一流大学；培养在国内初高中成绩一般的学生考取适合自己的大学。</p>
-                                <a class="more_btn" href="#">Read More</a>
+                                <a class="more_btn" href="elements.html#A-level">Read More</a>
                             </div>
                         </div>
                         <div class="intro_main_item" id="IB">
@@ -115,7 +115,7 @@
                                 </div>
                                 <p>IB课程即国际文凭组织IBO（International Baccalaureate Organization），是为全球学生开设从幼儿园到大学预科的课程，为3-19岁的学生提供智力，情感，个人发展，社会技能等方面的教育，使其获得学习，工作以及生存于世的各项能力。
                                     IBO成立于1968年，迄今为止遍布138个国家与2815个学校合作，学生数量超过77万。与A-Level、VCE、AP等课程并称全球四大高中课程体系。</p>
-                                <a class="more_btn" href="#">Read More</a>
+                                    <a class="more_btn" href="elements.html#IB">Read More</a>
                             </div>
                         </div>
                         <div class="intro_main_item" id="AP">
@@ -130,7 +130,7 @@
                                 <div class="intro_author">
                                 </div>
                                 <p>AP课程是指针对AP众多的考试科目进行的授课辅导，目前以Calculus AB(微积分AB)、Calculus BC(微积分BC)、Statistics（统计学）、Physics B(物理B)、Macroeconomics（宏观经济学）、 Microeconomics（微观经济）几门课程为主。AP是Advanced Placement的缩写，中文一般翻译为美国大学先修课程或美国大学预修课程。指由美国大学理事会（The College Board）提供的在高中授课的大学课程。美国大学预修课程，指由美国大学理事会提供的在高中授课的大学课程。AP成绩已成为美国大学重要录取依据，美国大学已经普遍把学生在AP考试中的表现作为衡量其是否能够胜任大学学习的依据，因此AP考试成绩已经成为众多大学录取考虑因素中最为重要的依据之一。</p>
-                                <a class="more_btn" href="#">Read More</a>
+                                <a class="more_btn" href="elements.html#AP">Read More</a>
                             </div>
                         </div>
                         <div class="intro_main_item" id="SAT">
@@ -146,7 +146,7 @@
                                 </div>
                                 <p>由美国大学委员会（College Board）主办的一场考试，其成绩是世界各国高中生申请美国大学入学资格及奖学金的重要参考，它和ACT（American College Test）都被称为美国高考。
                                     但是此考试成绩并非所有的大学都要求提供，有些顶尖大学在入学条件上并不强制要求提供，学生可以用其它成绩来代替，在申请大学时需要仔细查阅该校的入学条件。</p>
-                                <a class="more_btn" href="#">Read More</a>
+                                <a class="more_btn" href="elements.html#SAT">Read More</a>
                             </div>
                         </div>
                         <div class="intro_main_item" id="competition">
@@ -164,7 +164,7 @@
                                 <p>牛津MAT：MAT全称是Mathematics Admissions Test，是牛津大学数学系（数学专业，计算机专业）选拨学生的入学考试。MAT考试时间为2个小时30分，考试内容主要是集中在纯数学部分（CIE 的Pure math或者Edexcel 的C1、C2模块）。</p>
                                 <p>物理碗：（PhysicsBowl）是针对高中生和参与学校的比赛。一般在每年四月，学生在考点通过回答高中物理课程中的40个选择题来竞争。该竞赛由各大美国名校的物理教授以及经验丰富的物理教师进行出题和审核，内容涉及力学、电磁学等所有高中物理各大模块。</p>
                                 <p>AMC：（American Mathematics Competition）美国数学竞赛的缩写，由美国数学协会于1950年成立。AMC不但是美国顶尖数学人才的人才库，更为学校提供了解申请入学者在数学科目上的学习成就与表现评估。多年来，AMC还扮演为美国培育世界数学奥林匹克（IMO）选手的重大责任。</p>
-                                <a class="more_btn" href="#">Read More</a>
+                                <a class="more_btn" href="elements.html#competition">Read More</a>
                             </div>
                         </div>
                         <div class="intro_main_item" id="language">
@@ -181,7 +181,7 @@
                                 <p>SuperNova小语种课程经过专业教师团队精心设计打造，参考《欧洲语言通用框架性标准》，采用科学、严谨的方式分级和编排，致力于使学员在合理的时间内从0基础学到精通。</p>
                                 <p>SuperNova小语种课程包括法语、西班牙语、德语、日语等热门小语种，通过专业语音学教师的标准示范及对大量例词、例句的反复训练，练就地道发音。</p>
                                 
-                                <a class="more_btn" href="#">Read More</a>
+                                <a class="more_btn" href="elements.html#language">Read More</a>
                             </div>
                         </div>
                     </div>
