--- a/UBWebsite/elements.html
+++ b/UBWebsite/elements.html
@@ -123,36 +123,97 @@
                             <p>Tomas是SN国际教育经济金牌教师；武汉大学经济学phd，多年来一直致力于宏观经济学研究，有着扎实的理论基础。寓教于乐，善于结合实际案例解析经济中晦涩难懂的名词，受广大学生喜爱。</p>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="feature_item">
+                            <div class="f_icon">
+                                <img src="img/icon/icon-1.png" alt="">
+                            </div>
+                            <h4>Yuki / 日语</h4>
+                            <p>Yuki老师是SN国际教育日语金牌教师，中国人民大学日语语言文学专业硕士，有日本早稻田大学交换以及翻译公司实习经历，教学认真严谨，亲和力超强，具备深厚的专业功底和日本文化底蕴。</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="feature_item">
+                            <div class="f_icon">
+                                <img src="img/icon/icon-1.png" alt="">
+                            </div>
+                            <h4>Zoe / 法语</h4>
+                            <p>Zoe是SN国际教育法语金牌教师，目前在北京语言大学就读法语翻译硕士，曾在法国里昂师范大学进行交换学习，擅长法语口语教学，法语语言功底扎实，发音纯正，教学思路清晰，风格独特，寓教于乐。</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
         <!--================End Buttons Area =================-->
         
         <!--================Progress Bar Area =================-->
-        <section class="progress_bar_area">
+        <section class="progress_bar_area"  id="table">
             <div class="container">
                 <h3 class="elements_title">特色课程表（更多课程方案请咨询微信客服：SuperNovaEdu） </h3>
-                <div class="row">
-                    <!-- IGCSE课程表 -->
-                    <table id="IGCSE"></table>
-
-                    <!-- A-level课程表 -->
-                    <table id="A-level"></table>
-
-                    <!-- IB课程表 -->
-                    <table id="IB"></table>
-
-                    <!-- AP课程表 -->
-                    <table id="AP"></table>
-
-                    <!-- SAT课程表 -->
-                    <table id="SAT"></table>
-
-                    <!-- 国际竞赛课程表 -->
-                    <table id="competition"></table>
-
-                    <!-- 小语种课程表 -->
-                    <table id="language"></table>
+                <div class="row table">
+                    <table>
+                        <tr>
+                            <th>课程名称</th>
+                            <th>课程时间</th>
+                            <th>预计总课时</th>
+                            <th>预计上课频率</th>
+                            <th style="width: 280px;">适合对象</th>
+                            <th>课程价格</th>
+                        </tr>
+                        <tr>
+                            <td>IGCSE暑期预习课程<br />（不超过3人）</td>
+                            <td>6月-9月</td>
+                            <td>30小时</td>
+                            <td>8小时/周</td>
+                            <td>准备开始学IGCSE / <br />
+                                提前预习第二年课程的同学</td>
+                            <td>8670  (1人)<br />
+                                14300（2人结伴）<br />
+                                10470（金牌教师一对一）</td>
+                        </tr>
+                        <tr>
+                            <td>IGCSE 课内同步辅导<br />
+                                （不超过3人）</td>
+                            <td>开学期间</td>
+                            <td>40小时</td>
+                            <td>2小时/周</td>
+                            <td>同步学校提分提高</td>
+                            <td>11560  (1人)<br />
+                                18900（2人结伴）<br />
+                                13960（金牌教师一对一）</td>
+                        </tr>
+                        <tr>
+                            <td>IGCSE考前冲刺（零基础班/A*班）<br />
+                                （不超过3人）</td>
+                            <td>3-4月，9-10月<br />
+                                （大考前1-2个月）</td>
+                            <td>40小时</td>
+                            <td>2小时/天</td>
+                            <td>(零基础班）之前没有学过或完全听不懂，想要快速提升拿高分<br />
+                                （A*班）有一定基础想要保证稳拿高分的学生</td>
+                            <td>11560  (1人)<br />
+                                19000（2人结伴）</td>
+                        </tr>
+                        <tr>
+                            <td>IGCSE紧急答疑<br />
+                                （24小时内要老师答疑）</td>
+                            <td>随时</td>
+                            <td>根据实际需要</td>
+                            <td>根据实际需要</td>
+                            <td>马上要准备考试需要紧急答疑</td>
+                            <td>399/小时（1对1）<br />
+                                459/小时（金牌教师一对一）</td>
+                        </tr>
+                        <tr>
+                            <td>IGCSE普通答疑或按照单堂购买</td>
+                            <td>提前2天预约</td>
+                            <td>根据实际需要</td>
+                            <td>根据实际需要</td>
+                            <td>有困惑或者不想一次性购买太多课程</td>
+                            <td>339/小时（1对1）<br />
+                                399/小时（金牌教师一对一）</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </section>
