--- a/UBWebsite/index.html
+++ b/UBWebsite/index.html
@@ -96,7 +96,7 @@
                             <div class="f_icon">
                                 <img src="img/icon/icon-2.png" alt="">
                             </div>
-                            <h4>Cedar / IB英语</h4>
+                            <h4>Cedar / IB English</h4>
                             <p>英语一直是我的弱项，但是想申报国际学校必须要学习。老师除了英语基础之外，会给我布置一些有趣的英文阅读任务，拓宽知识面的同时学习了英语，对我的帮助很大。</p>
                         </div>
                     </div>
@@ -105,8 +105,8 @@
                             <div class="f_icon">
                                 <img src="img/icon/icon-3.png" alt="">
                             </div>
-                            <h4>Social Media</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Lynn / IGCSE Math</h4>
+                            <p>我以前对数学不感兴趣，抱着试试的心态听了一节课，没想到老师讲解非常细致，深入浅出，把以前我不会的知识点都讲明白了，还布置了有针对性的课后习题，我现在学习劲头很足，成绩也提高了不少。</p>
                         </div>
                     </div>
                 </div>
