--- a/onlineJudge/index.html
+++ b/onlineJudge/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>SuperNova国际教育</title>
+    <title>企业电力运维云平台</title>
   </head>
   <body style="margin: 0;">
     <div id="app"></div>
